--- a/Rules-Complete/Provider/Reject.yaml
+++ b/Rules-Complete/Provider/Reject.yaml
@@ -34536,16 +34536,16 @@ payload:
   - DOMAIN,wxsnsdy.wxs.qq.com
   - DOMAIN,wxsnsdythumb.wxs.qq.com
   - DOMAIN,yt-adp.nosdn.127.net
-  - IP-CIDR,10.72.25.0/24
+  - IP-CIDR,10.72.25.0/24,no-resolve
   - IP-CIDR,101.227.200.0/24,no-resolve
-  - IP-CIDR,101.227.200.11/32
   - IP-CIDR,101.227.200.11/32,no-resolve
-  - IP-CIDR,101.227.200.28/32
+  - IP-CIDR,101.227.200.11/32,no-resolve
   - IP-CIDR,101.227.200.28/32,no-resolve
-  - IP-CIDR,101.227.97.240/32
+  - IP-CIDR,101.227.200.28/32,no-resolve
+  - IP-CIDR,101.227.97.240/32,no-resolve
   - IP-CIDR,101.227.97.240/32,no-resolve
   - IP-CIDR,103.249.254.113/32,no-resolve
-  - IP-CIDR,103.49.209.27/32
+  - IP-CIDR,103.49.209.27/32,no-resolve
   - IP-CIDR,103.49.209.27/32,no-resolve
   - IP-CIDR,103.75.47.19/32,no-resolve
   - IP-CIDR,104.195.62.12/32,no-resolve
@@ -34559,47 +34559,47 @@ payload:
   - IP-CIDR,104.233.203.164/32,no-resolve
   - IP-CIDR,104.237.67.78/32,no-resolve
   - IP-CIDR,106.187.95.251/32,no-resolve
-  - IP-CIDR,106.75.231.48/32
+  - IP-CIDR,106.75.231.48/32,no-resolve
   - IP-CIDR,107.172.176.197/32,no-resolve
   - IP-CIDR,107.183.137.18/32,no-resolve
   - IP-CIDR,107.187.122.172/32,no-resolve
   - IP-CIDR,107.187.255.178/32,no-resolve
   - IP-CIDR,108.171.248.234/32,no-resolve
-  - IP-CIDR,111.175.220.163/32
-  - IP-CIDR,111.175.220.164/32
+  - IP-CIDR,111.175.220.163/32,no-resolve
+  - IP-CIDR,111.175.220.164/32,no-resolve
   - IP-CIDR,112.74.95.46/32,no-resolve
-  - IP-CIDR,114.247.28.96/32
+  - IP-CIDR,114.247.28.96/32,no-resolve
   - IP-CIDR,114.95.102.77/32,no-resolve
-  - IP-CIDR,115.182.16.79/32
+  - IP-CIDR,115.182.16.79/32,no-resolve
   - IP-CIDR,115.238.246.181/32,no-resolve
   - IP-CIDR,115.29.141.121/32,no-resolve
   - IP-CIDR,116.55.227.242/32,no-resolve
-  - IP-CIDR,117.177.248.17/32
   - IP-CIDR,117.177.248.17/32,no-resolve
-  - IP-CIDR,117.177.248.41/32
+  - IP-CIDR,117.177.248.17/32,no-resolve
+  - IP-CIDR,117.177.248.41/32,no-resolve
   - IP-CIDR,117.177.248.41/32,no-resolve
   - IP-CIDR,117.25.133.209/32,no-resolve
-  - IP-CIDR,118.144.88.126/32
-  - IP-CIDR,118.144.88.215/32
+  - IP-CIDR,118.144.88.126/32,no-resolve
+  - IP-CIDR,118.144.88.215/32,no-resolve
   - IP-CIDR,118.144.88.216/32,no-resolve
   - IP-CIDR,118.24.199.184/32,no-resolve
   - IP-CIDR,119.29.207.87/32,no-resolve
   - IP-CIDR,119.29.80.185/32,no-resolve
-  - IP-CIDR,119.4.249.166/32
+  - IP-CIDR,119.4.249.166/32,no-resolve
   - IP-CIDR,119.4.249.166/32,no-resolve
   - IP-CIDR,120.27.34.156/32,no-resolve
-  - IP-CIDR,120.76.189.132/32
+  - IP-CIDR,120.76.189.132/32,no-resolve
   - IP-CIDR,121.40.25.88/32,no-resolve
   - IP-CIDR,122.114.239.160/32,no-resolve
   - IP-CIDR,122.227.254.195/32,no-resolve
   - IP-CIDR,122.228.236.165/32,no-resolve
-  - IP-CIDR,123.56.152.96/32
+  - IP-CIDR,123.56.152.96/32,no-resolve
   - IP-CIDR,123.59.150.56/32,no-resolve
-  - IP-CIDR,124.14.21.147/32
-  - IP-CIDR,124.14.21.151/32
-  - IP-CIDR,124.192.153.42/32
+  - IP-CIDR,124.14.21.147/32,no-resolve
+  - IP-CIDR,124.14.21.151/32,no-resolve
   - IP-CIDR,124.192.153.42/32,no-resolve
-  - IP-CIDR,124.232.160.178/32
+  - IP-CIDR,124.192.153.42/32,no-resolve
+  - IP-CIDR,124.232.160.178/32,no-resolve
   - IP-CIDR,124.232.160.178/32,no-resolve
   - IP-CIDR,134.73.54.252/32,no-resolve
   - IP-CIDR,137.175.18.113/32,no-resolve
@@ -34621,11 +34621,11 @@ payload:
   - IP-CIDR,172.247.15.58/32,no-resolve
   - IP-CIDR,172.81.246.180/32,no-resolve
   - IP-CIDR,174.139.53.195/32,no-resolve
-  - IP-CIDR,175.6.223.15/32
-  - IP-CIDR,180.166.52.24/32
+  - IP-CIDR,175.6.223.15/32,no-resolve
+  - IP-CIDR,180.166.52.24/32,no-resolve
   - IP-CIDR,180.76.171.28/32,no-resolve
   - IP-CIDR,182.92.81.104/32,no-resolve
-  - IP-CIDR,183.59.53.237/32
+  - IP-CIDR,183.59.53.237/32,no-resolve
   - IP-CIDR,194.36.101.178/32,no-resolve
   - IP-CIDR,198.2.215.131/32,no-resolve
   - IP-CIDR,199.231.214.62/32,no-resolve
@@ -34635,64 +34635,64 @@ payload:
   - IP-CIDR,211.167.105.131/32,no-resolve
   - IP-CIDR,212.64.34.17/32,no-resolve
   - IP-CIDR,218.25.246.118/32,no-resolve
-  - IP-CIDR,218.93.127.37/32
+  - IP-CIDR,218.93.127.37/32,no-resolve
   - IP-CIDR,219.234.83.60/32,no-resolve
-  - IP-CIDR,220.115.251.25/32
   - IP-CIDR,220.115.251.25/32,no-resolve
-  - IP-CIDR,220.196.52.141/32
-  - IP-CIDR,221.179.131.72/32
-  - IP-CIDR,221.179.140.145/32
+  - IP-CIDR,220.115.251.25/32,no-resolve
+  - IP-CIDR,220.196.52.141/32,no-resolve
+  - IP-CIDR,221.179.131.72/32,no-resolve
+  - IP-CIDR,221.179.140.145/32,no-resolve
   - IP-CIDR,221.204.213.222/32,no-resolve
-  - IP-CIDR,221.228.17.152/32
-  - IP-CIDR,221.231.6.79/32
-  - IP-CIDR,221.6.4.148/32
-  - IP-CIDR,222.186.61.91/32
-  - IP-CIDR,222.186.61.95/32
-  - IP-CIDR,222.186.61.96/32
-  - IP-CIDR,222.186.61.97/32
-  - IP-CIDR,222.73.156.235/32
-  - IP-CIDR,223.87.176.139/32
+  - IP-CIDR,221.228.17.152/32,no-resolve
+  - IP-CIDR,221.231.6.79/32,no-resolve
+  - IP-CIDR,221.6.4.148/32,no-resolve
+  - IP-CIDR,222.186.61.91/32,no-resolve
+  - IP-CIDR,222.186.61.95/32,no-resolve
+  - IP-CIDR,222.186.61.96/32,no-resolve
+  - IP-CIDR,222.186.61.97/32,no-resolve
+  - IP-CIDR,222.73.156.235/32,no-resolve
   - IP-CIDR,223.87.176.139/32,no-resolve
-  - IP-CIDR,223.87.176.176/32
+  - IP-CIDR,223.87.176.139/32,no-resolve
   - IP-CIDR,223.87.176.176/32,no-resolve
-  - IP-CIDR,223.87.177.180/32
+  - IP-CIDR,223.87.176.176/32,no-resolve
   - IP-CIDR,223.87.177.180/32,no-resolve
-  - IP-CIDR,223.87.177.182/32
+  - IP-CIDR,223.87.177.180/32,no-resolve
   - IP-CIDR,223.87.177.182/32,no-resolve
-  - IP-CIDR,223.87.177.184/32
+  - IP-CIDR,223.87.177.182/32,no-resolve
   - IP-CIDR,223.87.177.184/32,no-resolve
-  - IP-CIDR,223.87.177.43/32
+  - IP-CIDR,223.87.177.184/32,no-resolve
   - IP-CIDR,223.87.177.43/32,no-resolve
-  - IP-CIDR,223.87.177.47/32
+  - IP-CIDR,223.87.177.43/32,no-resolve
   - IP-CIDR,223.87.177.47/32,no-resolve
-  - IP-CIDR,223.87.177.80/32
+  - IP-CIDR,223.87.177.47/32,no-resolve
   - IP-CIDR,223.87.177.80/32,no-resolve
-  - IP-CIDR,223.87.182.101/32
+  - IP-CIDR,223.87.177.80/32,no-resolve
   - IP-CIDR,223.87.182.101/32,no-resolve
-  - IP-CIDR,223.87.182.102/32
+  - IP-CIDR,223.87.182.101/32,no-resolve
   - IP-CIDR,223.87.182.102/32,no-resolve
-  - IP-CIDR,223.87.182.11/32
+  - IP-CIDR,223.87.182.102/32,no-resolve
   - IP-CIDR,223.87.182.11/32,no-resolve
-  - IP-CIDR,223.87.182.52/32
+  - IP-CIDR,223.87.182.11/32,no-resolve
+  - IP-CIDR,223.87.182.52/32,no-resolve
   - IP-CIDR,223.87.182.52/32,no-resolve
   - IP-CIDR,23.244.43.212/32,no-resolve
   - IP-CIDR,23.251.45.156/32,no-resolve
   - IP-CIDR,23.89.50.180/32,no-resolve
   - IP-CIDR,23.91.3.114/32,no-resolve
   - IP-CIDR,35.232.188.118/32,no-resolve
-  - IP-CIDR,39.107.15.115/32
+  - IP-CIDR,39.107.15.115/32,no-resolve
   - IP-CIDR,45.126.123.80/32,no-resolve
   - IP-CIDR,45.192.59.62/32,no-resolve
   - IP-CIDR,45.34.240.72/32,no-resolve
-  - IP-CIDR,47.89.59.182/32
+  - IP-CIDR,47.89.59.182/32,no-resolve
   - IP-CIDR,47.90.50.177/32,no-resolve
   - IP-CIDR,58.215.179.159/32,no-resolve
   - IP-CIDR,60.190.139.164/32,no-resolve
   - IP-CIDR,61.152.223.15/32,no-resolve
-  - IP-CIDR,61.160.200.223/32
-  - IP-CIDR,61.160.200.242/32
-  - IP-CIDR,61.160.200.252/32
+  - IP-CIDR,61.160.200.223/32,no-resolve
+  - IP-CIDR,61.160.200.242/32,no-resolve
+  - IP-CIDR,61.160.200.252/32,no-resolve
   - IP-CIDR,61.174.50.211/32,no-resolve
-  - IP-CIDR,61.174.50.214/32
+  - IP-CIDR,61.174.50.214/32,no-resolve
   - IP-CIDR,66.212.56.229/32,no-resolve
   - IP-CIDR,69.28.57.245/32,no-resolve
