--- a/Rules-Streamline/Provider/GlobalTV.yaml
+++ b/Rules-Streamline/Provider/GlobalTV.yaml
@@ -325,8 +325,15 @@ payload:
   # - User-Agent,*youtube*
   # - User-Agent,YouTube*
   - DOMAIN-KEYWORD,youtube
+  - DOMAIN-SUFFIX,youtube-nocookie.com
+  - DOMAIN-SUFFIX,youtubecn.com
+  - DOMAIN-SUFFIX,youtubeeducation.com
+  - DOMAIN-SUFFIX,youtubegaming.com
   - DOMAIN-SUFFIX,googlevideo.com
+  - DOMAIN-SUFFIX,gvt0.com
+  - DOMAIN-SUFFIX,gvt1.com
   - DOMAIN-SUFFIX,gvt2.com
+  - DOMAIN-SUFFIX,gvt3.com
   - DOMAIN-SUFFIX,youtu.be
   - DOMAIN-SUFFIX,youtube.com
   - DOMAIN-SUFFIX,ytimg.com
