将Domestic中的oracle域名移入Developer

--- a/Rules-Complete/Provider/Developer.yaml
+++ b/Rules-Complete/Provider/Developer.yaml
@@ -12,6 +12,7 @@ payload:
   - DOMAIN-SUFFIX,maven.org
   - DOMAIN-SUFFIX,medium.com
   - DOMAIN-SUFFIX,mvnrepository.com
+  - DOMAIN-SUFFIX,oracle.com
   - DOMAIN-SUFFIX,quay.io
   - DOMAIN-SUFFIX,reddit.com
   - DOMAIN-SUFFIX,redhat.com
