--- a/Rules-Streamline/Provider/Proxy.yaml
+++ b/Rules-Streamline/Provider/Proxy.yaml
@@ -15,6 +15,7 @@ payload:
   - DOMAIN-KEYWORD,tesla
   - DOMAIN-KEYWORD,twitter
   - DOMAIN-KEYWORD,whatsapp
+  - DOMAIN-SUFFIX,appcenter.ms
   - DOMAIN-SUFFIX,000webhost.com
   - DOMAIN-SUFFIX,030buy.com
   - DOMAIN-SUFFIX,0rz.tw
