--- a/Rules-Complete/Provider/EHantai.yaml
+++ b/Rules-Complete/Provider/EHantai.yaml
@@ -1,5 +1,5 @@
 payload:
-  # > E-Hentai Galleries
+  # > E-Hentai
   - DOMAIN-SUFFIX,e-hentai.org
   - DOMAIN-SUFFIX,ehgt.org
   - DOMAIN-SUFFIX,ehwiki.org
