--- a/Rules-Complete/Provider/Proxy.yaml
+++ b/Rules-Complete/Provider/Proxy.yaml
@@ -5,13 +5,13 @@ payload:
   - DOMAIN-KEYWORD,dlercloud
   - DOMAIN-KEYWORD,dropbox
   - DOMAIN-KEYWORD,facebook
-  - DOMAIN-KEYWORD,github
   - DOMAIN-KEYWORD,instagram
   - DOMAIN-KEYWORD,jetbrains
   - DOMAIN-KEYWORD,marshmallow-qa.com
   - DOMAIN-KEYWORD,tesla
   - DOMAIN-KEYWORD,twitter
   - DOMAIN-KEYWORD,whatsapp
+  - DOMAIN-SUFFIX,gitbook.io
   - DOMAIN-SUFFIX,000webhost.com
   - DOMAIN-SUFFIX,030buy.com
   - DOMAIN-SUFFIX,0rz.tw
@@ -273,12 +273,6 @@ payload:
   - DOMAIN-SUFFIX,anchorfree.com
   - DOMAIN-SUFFIX,ancsconf.org
   - DOMAIN-SUFFIX,andfaraway.net
-  - DOMAIN-SUFFIX,android-x86.org
-  - DOMAIN-SUFFIX,android.com
-  - DOMAIN-SUFFIX,androidapksfree.com
-  - DOMAIN-SUFFIX,androidify.com
-  - DOMAIN-SUFFIX,androidplus.co
-  - DOMAIN-SUFFIX,androidtv.com
   - DOMAIN-SUFFIX,andygod.com
   - DOMAIN-SUFFIX,angela-merkel.de
   - DOMAIN-SUFFIX,angelfire.com
@@ -1024,12 +1018,6 @@ payload:
   - DOMAIN-SUFFIX,christiantimes.org.hk
   - DOMAIN-SUFFIX,christusrex.org
   - DOMAIN-SUFFIX,chrlawyers.hk
-  - DOMAIN-SUFFIX,chrome.com
-  - DOMAIN-SUFFIX,chromecast.com
-  - DOMAIN-SUFFIX,chromeexperiments.com
-  - DOMAIN-SUFFIX,chromercise.com
-  - DOMAIN-SUFFIX,chromestatus.com
-  - DOMAIN-SUFFIX,chromium.org
   - DOMAIN-SUFFIX,chuang-yen.org
   - DOMAIN-SUFFIX,chubold.com
   - DOMAIN-SUFFIX,chubun.com
@@ -2035,13 +2023,8 @@ payload:
   - DOMAIN-SUFFIX,giga-web.jp
   - DOMAIN-SUFFIX,gigporno.ru
   - DOMAIN-SUFFIX,girlbanker.com
-  - DOMAIN-SUFFIX,gist.github.com
   - DOMAIN-SUFFIX,git.io
   - DOMAIN-SUFFIX,gitbook.com
-  - DOMAIN-SUFFIX,github.com
-  - DOMAIN-SUFFIX,github.io
-  - DOMAIN-SUFFIX,githubassets.com
-  - DOMAIN-SUFFIX,githubusercontent.com
   - DOMAIN-SUFFIX,gizlen.net
   - DOMAIN-SUFFIX,gjczz.com
   - DOMAIN-SUFFIX,glass8.eu
@@ -3955,9 +3938,6 @@ payload:
   - DOMAIN-SUFFIX,rarbgprx.org
   - DOMAIN-SUFFIX,raremovie.cc
   - DOMAIN-SUFFIX,raremovie.net
-  - DOMAIN-SUFFIX,raw.githubusercontent.com
-  - DOMAIN-SUFFIX,rawgit.com
-  - DOMAIN-SUFFIX,rawgithub.com
   - DOMAIN-SUFFIX,razyboard.com
   - DOMAIN-SUFFIX,rcam.target.com
   - DOMAIN-SUFFIX,rcinet.ca
