--- a/Rules-Complete/Provider/Developer.yaml
+++ b/Rules-Complete/Provider/Developer.yaml
@@ -1,7 +1,9 @@
 payload:
   # > Developer 开发者常用国外网站、镜像和论坛
+  - DOMAIN-KEYWORD,github
   - DOMAIN-SUFFIX,apache.org
   - DOMAIN-SUFFIX,docker.com
+  - DOMAIN-SUFFIX,eclipse.org
   - DOMAIN-SUFFIX,elastic.co
   - DOMAIN-SUFFIX,elastic.com
   - DOMAIN-SUFFIX,gcr.io
@@ -15,6 +17,9 @@ payload:
   - DOMAIN-SUFFIX,oracle.com
   - DOMAIN-SUFFIX,python.org
   - DOMAIN-SUFFIX,quay.io
+  - DOMAIN-SUFFIX,raw.githubusercontent.com
+  - DOMAIN-SUFFIX,rawgit.com
+  - DOMAIN-SUFFIX,rawgithub.com
   - DOMAIN-SUFFIX,reddit.com
   - DOMAIN-SUFFIX,redhat.com
   - DOMAIN-SUFFIX,sonatype.org
