--- a/Rules-Streamline/Provider/Domestic.yaml
+++ b/Rules-Streamline/Provider/Domestic.yaml
@@ -60,19 +60,12 @@ payload:
   - DOMAIN-SUFFIX,air-matters.com
   - DOMAIN-SUFFIX,air-matters.io
   - DOMAIN-SUFFIX,aixifan.com
-  - DOMAIN-SUFFIX,akadns.net
   - DOMAIN-SUFFIX,algocasts.io
   - DOMAIN-SUFFIX,aliapp.org
-  - DOMAIN-SUFFIX,alibaba.com
-  - DOMAIN-SUFFIX,alibabacloud.com
-  - DOMAIN-SUFFIX,alibabausercontent.com
-  - DOMAIN-SUFFIX,alicdn.com
   - DOMAIN-SUFFIX,alicloudccp.com
   - DOMAIN-SUFFIX,aliexpress.com
   - DOMAIN-SUFFIX,aliimg.com
   - DOMAIN-SUFFIX,alikunlun.com
-  - DOMAIN-SUFFIX,alipay.com
-  - DOMAIN-SUFFIX,alipayobjects.com
   - DOMAIN-SUFFIX,alisoft.com
   - DOMAIN-SUFFIX,aliyun.com
   - DOMAIN-SUFFIX,aliyuncdn.com
@@ -96,8 +89,6 @@ payload:
   - DOMAIN-SUFFIX,baidu.com
   - DOMAIN-SUFFIX,baidubcr.com
   - DOMAIN-SUFFIX,baidupan.com
-  - DOMAIN-SUFFIX,baidupcs.com
-  - DOMAIN-SUFFIX,baidustatic.com
   - DOMAIN-SUFFIX,baike.com
   - DOMAIN-SUFFIX,baomitu.com
   - DOMAIN-SUFFIX,battle.net
@@ -108,7 +99,6 @@ payload:
   - DOMAIN-SUFFIX,bdurl.net
   - DOMAIN-SUFFIX,beatsbydre.com
   - DOMAIN-SUFFIX,beitai.pt
-  - DOMAIN-SUFFIX,bet365.com
   - DOMAIN-SUFFIX,biqudu.com
   - DOMAIN-SUFFIX,biquge.com
   - DOMAIN-SUFFIX,bitauto.com
@@ -194,7 +184,6 @@ payload:
   - DOMAIN-SUFFIX,eastmoney.com
   - DOMAIN-SUFFIX,ecitic.com
   - DOMAIN-SUFFIX,ecitic.net
-  - DOMAIN-SUFFIX,eclipse.org
   - DOMAIN-SUFFIX,edu.cn
   - DOMAIN-SUFFIX,ele.me
   - DOMAIN-SUFFIX,empornium.me
@@ -228,9 +217,6 @@ payload:
   - DOMAIN-SUFFIX,gwdang.com
   - DOMAIN-SUFFIX,gzlzfm.com
   - DOMAIN-SUFFIX,haibian.com
-  - DOMAIN-SUFFIX,hao123.com
-  - DOMAIN-SUFFIX,hao123img.com
-  - DOMAIN-SUFFIX,haosou.com
   - DOMAIN-SUFFIX,hc-cdn.com
   - DOMAIN-SUFFIX,hd4fans.org
   - DOMAIN-SUFFIX,hdchina.org
@@ -290,7 +276,6 @@ payload:
   - DOMAIN-SUFFIX,jianshu.io
   - DOMAIN-SUFFIX,jianshuapi.com
   - DOMAIN-SUFFIX,jiasule.com
-  - DOMAIN-SUFFIX,jiathis.com
   - DOMAIN-SUFFIX,jmstatic.com
   - DOMAIN-SUFFIX,jomodns.com
   - DOMAIN-SUFFIX,jpopsuki.eu
@@ -303,7 +288,6 @@ payload:
   - DOMAIN-SUFFIX,kaola.com
   - DOMAIN-SUFFIX,keepfrds.com
   - DOMAIN-SUFFIX,knewone.com
-  - DOMAIN-SUFFIX,koowo.com
   - DOMAIN-SUFFIX,ksosoft.com
   - DOMAIN-SUFFIX,kspkg.com
   - DOMAIN-SUFFIX,ksyun.com
@@ -386,7 +370,6 @@ payload:
   - DOMAIN-SUFFIX,nssurge.com
   - DOMAIN-SUFFIX,nuomi.com
   - DOMAIN-SUFFIX,onedns.net
-  - DOMAIN-SUFFIX,onlinedown.net
   - DOMAIN-SUFFIX,open.cd
   - DOMAIN-SUFFIX,oschina.net
   - DOMAIN-SUFFIX,ourbits.club
@@ -397,12 +380,8 @@ payload:
   - DOMAIN-SUFFIX,paipai.com
   - DOMAIN-SUFFIX,paragon.com
   - DOMAIN-SUFFIX,passthepopcorn.me
-  - DOMAIN-SUFFIX,paypal.com
   - DOMAIN-SUFFIX,pgyer.com
   - DOMAIN-SUFFIX,pinduoduo.com
-  - DOMAIN-SUFFIX,playstation.com
-  - DOMAIN-SUFFIX,playstation.net
-  - DOMAIN-SUFFIX,playstationnetwork.com
   - DOMAIN-SUFFIX,pniao.com
   - DOMAIN-SUFFIX,polyv.net
   - DOMAIN-SUFFIX,pplive.com
@@ -472,8 +451,6 @@ payload:
   - DOMAIN-SUFFIX,sohuno.com
   - DOMAIN-SUFFIX,sohurdc.com
   - DOMAIN-SUFFIX,soku.com
-  - DOMAIN-SUFFIX,sony.com
-  - DOMAIN-SUFFIX,sonyentertainmentnetwork.com
   - DOMAIN-SUFFIX,soso.com
   - DOMAIN-SUFFIX,soufunimg.com
   - DOMAIN-SUFFIX,springsunday.net
@@ -483,15 +460,6 @@ payload:
   - DOMAIN-SUFFIX,st.dl.pinyuncloud.com
   - DOMAIN-SUFFIX,startssl.com
   - DOMAIN-SUFFIX,staticfile.org
-  - DOMAIN-SUFFIX,steamcommunity-a.akamaihd.net
-  - DOMAIN-SUFFIX,steamcontent.com
-  - DOMAIN-SUFFIX,steamgames.com
-  - DOMAIN-SUFFIX,steampowered.com.8686c.com
-  - DOMAIN-SUFFIX,steamstat.us
-  - DOMAIN-SUFFIX,steamstatic.com
-  - DOMAIN-SUFFIX,steamusercontent.com
-  - DOMAIN-SUFFIX,steamuserimages-a.akamaihd.net
-  - DOMAIN-SUFFIX,store.steampowered.com
   - DOMAIN-SUFFIX,suning.com
   - DOMAIN-SUFFIX,symcd.com
   - DOMAIN-SUFFIX,taihe.com
@@ -504,7 +472,6 @@ payload:
   - DOMAIN-SUFFIX,teamviewer.com
   - DOMAIN-SUFFIX,tencent-cloud.net
   - DOMAIN-SUFFIX,tencent.com
-  - DOMAIN-SUFFIX,tencentmind.com
   - DOMAIN-SUFFIX,tenpay.com
   - DOMAIN-SUFFIX,th-sjy.com
   - DOMAIN-SUFFIX,thundercdn.com
@@ -565,12 +532,11 @@ payload:
   - DOMAIN-SUFFIX,weixin.com
   - DOMAIN-SUFFIX,weiyun.com
   - DOMAIN-SUFFIX,wenku8.net
-  - DOMAIN-SUFFIX,werewolf.53site.com
+  - DOMAIN,werewolf.53site.com
   - DOMAIN-SUFFIX,wkcdn.com
   - DOMAIN-SUFFIX,womai.com
   - DOMAIN-SUFFIX,wscdns.com
   - DOMAIN-SUFFIX,wukong.com
-  - DOMAIN-SUFFIX,xdrig.com
   - DOMAIN-SUFFIX,xhostfire.com
   - DOMAIN-SUFFIX,xhscdn.com
   - DOMAIN-SUFFIX,xiachufang.com
