--- a/Rules-Streamline/Provider/GlobalTV.yaml
+++ b/Rules-Streamline/Provider/GlobalTV.yaml
@@ -325,20 +325,18 @@ payload:
   # - User-Agent,*youtube*
   # - User-Agent,YouTube*
   - DOMAIN-KEYWORD,youtube
-  - DOMAIN-SUFFIX,youtube-nocookie.com
-  - DOMAIN-SUFFIX,youtubecn.com
-  - DOMAIN-SUFFIX,youtubeeducation.com
-  - DOMAIN-SUFFIX,youtubegaming.com
-  - DOMAIN-SUFFIX,googlevideo.com
+  - DOMAIN-KEYWORD,googlevideo
   - DOMAIN-SUFFIX,gvt0.com
   - DOMAIN-SUFFIX,gvt1.com
   - DOMAIN-SUFFIX,gvt2.com
   - DOMAIN-SUFFIX,gvt3.com
   - DOMAIN-SUFFIX,youtu.be
+  - DOMAIN-SUFFIX,youtube-nocookie.com
   - DOMAIN-SUFFIX,youtube.com
+  - DOMAIN-SUFFIX,yt.be
   - DOMAIN-SUFFIX,ytimg.com
-  - DOMAIN,youtubei.googleapis.com
-  - DOMAIN,yt3.ggpht.com
+  - DOMAIN-SUFFIX,youtubei.googleapis.com
+  - DOMAIN-SUFFIX,yt3.ggpht.com
   # > Bahamut
   # - User-Agent,Anime*
   - DOMAIN-SUFFIX,bahamut.com.tw
