--- a/Rules-Complete/Provider/Media/GlobalTV/Spotify.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Spotify.yaml
@@ -2,9 +2,11 @@ payload:
   # > Spotify
   # - User-Agent,Spotify*
   - DOMAIN-KEYWORD,-spotify-com
+  - DOMAIN-KEYWORD,spotify
   - DOMAIN-KEYWORD,spotify.com
   - DOMAIN-SUFFIX,pscdn.co
   - DOMAIN-SUFFIX,scdn.co
+  - DOMAIN-SUFFIX,spoti.fi
   - DOMAIN-SUFFIX,spoti.fi
   - DOMAIN-SUFFIX,spotify.com
   - DOMAIN-SUFFIX,spotifycdn.net
