更新哔哩哔哩和爱奇艺

--- a/Rules-Complete/Provider/Media/AsianTV/Bilibili.yaml
+++ b/Rules-Complete/Provider/Media/AsianTV/Bilibili.yaml
@@ -2,6 +2,7 @@ payload:
   # > Bilibili
   # - User-Agent,bili*
   # - User-Agent,Bilibili*
+  - DOMAIN-KEYWORD,bili
   - DOMAIN-SUFFIX,acg.tv
   - DOMAIN-SUFFIX,acgvideo.com
   - DOMAIN-SUFFIX,b23.tv
