--- a/Rules-Complete/Provider/Media/GlobalTV/BBC iPlayer.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/BBC iPlayer.yaml
@@ -2,6 +2,7 @@ payload:
   # > BBC iPlayer
   # - User-Agent,BBCiPlayer*
   - DOMAIN-KEYWORD,bbcfmt
+  - DOMAIN-KEYWORD,uk-live
   - DOMAIN-SUFFIX,bbc.co
   - DOMAIN-SUFFIX,bbc.co.uk
   - DOMAIN-SUFFIX,bbc.com
