--- a/Rules-Complete/Provider/Media/GlobalTV/Netflix.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Netflix.yaml
@@ -1,10 +1,9 @@
 payload:
   # > Netflix
   # - USER-AGENT,Argo*
-  - DOMAIN-SUFFIX,fast.com
-  - DOMAIN-SUFFIX,netflixdnstest9.com
+  - DOMAIN-KEYWORD,dualstack.apiproxy-
+  - DOMAIN-KEYWORD,dualstack.ichnaea-web-
   - DOMAIN-KEYWORD,netflix
-  - DOMAIN,netflix.com.edgesuite.net
   - DOMAIN-SUFFIX,netflix.com
   - DOMAIN-SUFFIX,netflix.com.edgesuite.net
   - DOMAIN-SUFFIX,netflix.net
@@ -17,22 +16,30 @@ payload:
   - DOMAIN-SUFFIX,netflixdnstest6.com
   - DOMAIN-SUFFIX,netflixdnstest7.com
   - DOMAIN-SUFFIX,netflixdnstest8.com
+  - DOMAIN-SUFFIX,netflixdnstest9.com
   - DOMAIN-SUFFIX,nflxext.com
   - DOMAIN-SUFFIX,nflximg.com
   - DOMAIN-SUFFIX,nflximg.net
   - DOMAIN-SUFFIX,nflxso.net
   - DOMAIN-SUFFIX,nflxvideo.net
+  - DOMAIN,netflix.com.edgesuite.net
+  - DOMAIN,netflix.com.edgesuite.net
   - IP-CIDR,103.87.204.0/22,no-resolve
   - IP-CIDR,103.87.205.0/24,no-resolve
   - IP-CIDR,103.87.206.0/24,no-resolve
   - IP-CIDR,103.87.207.0/24,no-resolve
   - IP-CIDR,108.175.0.0/16,no-resolve
+  - IP-CIDR,108.175.32.0/20,no-resolve
   - IP-CIDR,185.2.0.0/16,no-resolve
+  - IP-CIDR,185.2.220.0/22,no-resolve
   - IP-CIDR,185.9.0.0/16,no-resolve
   - IP-CIDR,185.9.188.0/22,no-resolve
   - IP-CIDR,192.173.0.0/16,no-resolve
+  - IP-CIDR,192.173.64.0/18,no-resolve
   - IP-CIDR,198.38.0.0/16,no-resolve
+  - IP-CIDR,198.38.96.0/19,no-resolve
   - IP-CIDR,198.45.0.0/16,no-resolve
+  - IP-CIDR,198.45.48.0/20,no-resolve
   - IP-CIDR,203.116.0.0/16,no-resolve
   - IP-CIDR,203.198.0.0/20,no-resolve
   - IP-CIDR,203.198.80.0/21,no-resolve
@@ -44,16 +51,20 @@ payload:
   - IP-CIDR,218.102.32.0/19,no-resolve
   - IP-CIDR,219.76.0.0/17,no-resolve
   - IP-CIDR,23.246.0.0/16,no-resolve
+  - IP-CIDR,23.246.0.0/18,no-resolve
   - IP-CIDR,23.78.0.0/16,no-resolve
   - IP-CIDR,34.192.0.0/16,no-resolve
   - IP-CIDR,34.208.0.0/12,no-resolve
+  - IP-CIDR,34.210.42.111/32,no-resolve
   - IP-CIDR,34.248.0.0/13,no-resolve
   - IP-CIDR,35.160.0.0/13,no-resolve
   - IP-CIDR,37.77.0.0/16,no-resolve
+  - IP-CIDR,37.77.184.0/21,no-resolve
   - IP-CIDR,38.72.126.0/24,no-resolve
   - IP-CIDR,44.224.0.0/16,no-resolve
   - IP-CIDR,44.230.0.0/16,no-resolve
   - IP-CIDR,45.57.0.0/16,no-resolve
+  - IP-CIDR,45.57.0.0/17,no-resolve
   - IP-CIDR,52.0.0.0/15,no-resolve
   - IP-CIDR,52.10.0.0/15,no-resolve
   - IP-CIDR,52.12.0.0/15,no-resolve
@@ -68,8 +79,10 @@ payload:
   - IP-CIDR,52.71.40.0/16,no-resolve
   - IP-CIDR,52.72.0.0/16,no-resolve
   - IP-CIDR,52.88.0.0/15,no-resolve
+  - IP-CIDR,52.89.124.203/32,no-resolve
   - IP-CIDR,54.0.0.0/16,no-resolve
   - IP-CIDR,54.148.0.0/15,no-resolve
+  - IP-CIDR,54.148.37.5/32,no-resolve
   - IP-CIDR,54.175.0.0/16,no-resolve
   - IP-CIDR,54.186.0.0/15,no-resolve
   - IP-CIDR,54.188.0.0/15,no-resolve
@@ -84,11 +97,4 @@ payload:
   - IP-CIDR,66.197.128.0/17,no-resolve
   - IP-CIDR,69.53.224.0/19,no-resolve
   - IP-CIDR,8.41.4.0/24,no-resolve
-  - IP-CIDR,23.246.0.0/18,no-resolve
-  - IP-CIDR,37.77.184.0/21,no-resolve
-  - IP-CIDR,45.57.0.0/17,no-resolve
-  - IP-CIDR,108.175.32.0/20,no-resolve
-  - IP-CIDR,185.2.220.0/22,no-resolve
-  - IP-CIDR,192.173.64.0/18,no-resolve
-  - IP-CIDR,198.38.96.0/19,no-resolve
-  - IP-CIDR,198.45.48.0/20,no-resolve
+  - PROCESS-NAME,com.netflix.mediaclient
